# Mod-Ardain

./: Cargo.toml  README.md  build.toml
.github/workflows/: rust_build.yml
conduit/: Cargo.toml
conduit/src/: lib.rs
conduit/xenolib/: Cargo.toml  build.rs
conduit/xenolib/include/: common.hpp  wrapper.hpp
conduit/xenolib/src/: lib.rs
docs/: mods.md  reverse-engineering.md  skyline.md
docs/xc2/: mods.md
offsets/: 2.1.0.toml
src/: config.rs  input.rs  lib.rs  macros.rs  module.rs
src/ffi/: hooks.rs  mod.rs  owned.rs  ui.rs
src/ui/: container.rs  mod.rs  overlay.rs  render.rs  text.rs
xc2/: Cargo.toml  build.rs
xc2/npdm/: xc2.json  xc2.npdm
xc2/offsets/: 2.1.0.toml
xc2/src/: input.rs  lib.rs  macros.rs
xc2/src/ffi/: hooks.rs  mod.rs
xc2/src/ui/: mod.rs  overlay.rs  render.rs  text.rs
xc3/: Cargo.toml  build.rs  build.toml
xc3/npdm/: xc3.json  xc3.npdm
xc3/offsets/: 1.1.0.toml
xc3/src/: lib.rs
xcde/: Cargo.toml
