[package]
name = "xc2-mod-menu"
version = "0.1.0"
authors = ["RoccoDev <hey@rocco.dev>"]
edition = "2018"
license = "GPL-3.0"

[package.metadata.skyline]
titleid = "0100E95004038000" # Xenoblade Chronicles 2
subsdk-name = "subsdk2"
custom-npdm = "npdm/xc2.npdm"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
serde = { version = "1.0", features = ["derive"] }
hashbrown = { version = "0.11", features = ["serde"] }
ciborium = "0.1"

[build-dependencies]
toml = "0.5"
ciborium = "0.1"
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
