[package]
name = "mod-ardain-xcde"
version = "0.1.0"
authors = ["RoccoDev <hey@rocco.dev>"]
edition = "2021"
license = "GPL-3.0"
publish = false

[package.metadata.skyline]
titleid = "0100FF500E34A000" # Xenoblade Chronicles: Definitive Edition

[lib]
crate-type = ["cdylib"]

[dependencies]
conduit = { path = "../conduit", features = ["xcde"] }
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
serde = { version = "1.0", features = ["derive"] }
hashbrown = { version = "0.11", features = ["serde"] }
ciborium = "0.1"

[build-dependencies]
toml = "0.5"
ciborium = "0.1"
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
